# markus

./: .dockerignore  .gitignore  09test.tex  Dockerfile  LICENSE  README.md  README.mks  markdown.md  netlify.toml  pyproject.toml  render.yaml  servesh.mks  test.mks
.aware/: workspace.json
examples/: README.md
examples/assets/: refs.bib
examples/formal/: feature-showcase.mks  ieee-minimal.mks
examples/informal/: lab-handout.mks  lecture-notes.mks  meeting-minutes.mks  research-notes.mks  seminar-discussion.mks  weekly-planner.mks
examples/quickstart/: minimal.mks
src/markus/: __init__.py  ast.py  check.py  cli.py  latex.py  parser.py  templates_registry.py  texpath.py
tests/: integration_batches.py  test_fixes.py  test_math_scripts.py  test_parser.py  test_templates.py
vscode-markus/: .vscodeignore  README.md  extension.js  language-configuration.json  package.json
vscode-markus/bundled/: run.py
vscode-markus/media/: viewer.js
vscode-markus/scripts/: build-icons.py  bundle-compiler.py
vscode-markus/syntaxes/: markus.tmLanguage.json
vscode-markus/themes/: markus-file-icon-theme.json
web/: .env.example  README.md  auth.js  middleware.js  package-lock.json  package.json
web/app/: globals.css  layout.jsx  page.jsx
web/components/: AuthButtons.jsx  Btn.jsx  Dialog.jsx  DocThumb.jsx  GrantDrive.jsx  HeroCanvas.jsx  HeroDemo.jsx  HeroPaper.jsx  LegalLayout.jsx  Loader.jsx  PdfViewer.jsx  SiteFooter.jsx  Studio.jsx  StudioSidebar.jsx  ThemeToggle.jsx  ViewToolbar.jsx
web/lib/: accounts.js  apiError.js  examples.js  ledger.js  pdfExport.js  (+5 more)
(+35 files in other folders)
